@@ -71,8 +71,6 @@ ID_NT		= MAKE_ID2('N', 'T')
 ID_BR		= MAKE_ID2('B', 'R')
 ID_PA		= MAKE_ID2('P', 'A')
 
-print 'ID_KE', ID_KE
-
 #-----------------------------------------------------------------------------
 #                               o p e n L o g
 #-----------------------------------------------------------------------------
